@@ -816,7 +816,7 @@ public class DataHandler {
                                     .getCategoryOptionCombo()
                                     .getUid()
                                     .equals(coc.getUid())))
-            .toList();
+            .collect(toList());
 
     if (!dimensionCategoryOptionCombos.isEmpty()) {
       builder.addDimension(
@@ -848,7 +848,7 @@ public class DataHandler {
                                     .getCategoryOptionCombo()
                                     .getUid()
                                     .equals(coc.getUid())))
-            .toList();
+            .collect(toList());
 
     if (!filterCategoryOptionCombos.isEmpty()) {
       builder.addFilter(
@@ -880,7 +880,7 @@ public class DataHandler {
                                     .getAttributeOptionCombo()
                                     .getUid()
                                     .equals(aoc.getUid())))
-            .toList();
+            .collect(toList());
 
     if (!dimensionAttributeOptionCombos.isEmpty()) {
       builder.addDimension(
@@ -912,7 +912,7 @@ public class DataHandler {
                                     .getAttributeOptionCombo()
                                     .getUid()
                                     .equals(aoc.getUid())))
-            .toList();
+            .collect(toList());
 
     if (!filterAttributeOptionCombos.isEmpty()) {
       builder.addFilter(
@@ -944,7 +944,7 @@ public class DataHandler {
                                     .getDataElement()
                                     .getUid()
                                     .equals(de.getUid())))
-            .toList();
+            .collect(toList());
     if (!dimensionDataElements.isEmpty()) {
       builder.addDimension(new BaseDimensionalObject(DATA_X_DIM_ID, DATA_X, dimensionDataElements));
     }
@@ -972,7 +972,7 @@ public class DataHandler {
                                     .getDataElement()
                                     .getUid()
                                     .equals(de.getUid())))
-            .toList();
+            .collect(toList());
     if (!filterDataElements.isEmpty()) {
       builder.addFilter(new BaseDimensionalObject(DATA_X_DIM_ID, DATA_X, filterDataElements));
     }
